--- a/styles/style.css
+++ b/styles/style.css
@@ -140,31 +140,37 @@ h2 {
 
 .crossfade>figure:nth-child(1) {
     background-image: url("images/tokio.jpg");
+    background-size: cover;
 }
 
 .crossfade>figure:nth-child(2) {
     animation-delay: 6s;
     background-image: url("images/new-york.jpeg");
+    background-size: cover;
 }
 
 .crossfade>figure:nth-child(3) {
     animation-delay: 12s;
     background-image: url("images/moscow.jpeg");
+    background-size: cover;
 }
 
 .crossfade>figure:nth-child(4) {
     animation-delay: 18s;
     background-image: url("images/london.jpg");
+    background-size: cover;
 }
 
 .crossfade>figure:nth-child(5) {
     animation-delay: 24s;
     background-image: url("images/sidney.jpg");
+    background-size: cover;
 }
 
 .crossfade>figure:nth-child(6) {
     animation-delay: 30s;
     background-image: url("images/paris.jpg");
+    background-size: cover;
 }
 
 
